objects/ffirule__IntegrationRuleMapping__c.object
<CustomObject>
    <customHelpPage>ffirule__helpintegrationrulemapping</customHelpPage>
    <fields>
        <fullName>ffirule__AllowNewRecordCreationOnLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow New Record Creation on Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__AlternateLookupResolutionField__c</fullName>
        <label>Alternate Lookup Resolution Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__IntegrationRule__c</fullName>
        <label>ClickLink Rule</label>
        <referenceTo>ffirule__IntegrationRule__c</referenceTo>
        <relationshipLabel>ClickLink Mappings</relationshipLabel>
        <relationshipName>IntegrationRuleMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffirule__MappingLiteral__c</fullName>
        <label>Mapping Literal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffirule__MappingType__c</fullName>
        <label>Mapping Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Source Field</fullName>
                    <default>true</default>
                    <label>Source Field</label>
                </value>
                <value>
                    <fullName>Custom Setting</fullName>
                </value>
                <value>
                    <fullName>Literal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffirule__SourceField__c</fullName>
        <label>Source Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__SourceObject__c</fullName>
        <label>Source Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__SourceResolutionControlField__c</fullName>
        <label>Source Resolution Control Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__SourceResolutionControlValueIsId__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Source Resolution Control Value Is Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__SourceSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Source Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__SourceValueIsId__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Source Value Is ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__TargetField__c</fullName>
        <label>Target Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__TargetLookupResolutionField__c</fullName>
        <label>Target Lookup Resolution Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__TargetRecordBasedOn__c</fullName>
        <label>Target Record Created From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Source Record</fullName>
                    <default>true</default>
                    <label>Source Record</label>
                </value>
                <value>
                    <fullName>Source Record Parent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffirule__TargetRecordType__c</fullName>
        <defaultValue>&quot;Default&quot;</defaultValue>
        <label>Target Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>ClickLink Mapping</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>